# drm-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  fetch_headers.sh
drm-ffi/: Cargo.toml
drm-ffi/drm-sys/: Cargo.toml  README.md  build.rs
drm-ffi/drm-sys/src/: bindings.rs  fourcc.rs  lib.rs
drm-ffi/src/: gem.rs  ioctl.rs  lib.rs  mode.rs  result.rs  syncobj.rs  utils.rs
drm-macros/: Cargo.toml
drm-macros/src/: lib.rs
drm-sys/: Cargo.toml  README.md  build.rs
drm-sys/src/: lib.rs
drm-sys/src/headers/: drm_api.h
examples/: atomic_modeset.rs  basic.rs  control.rs  ffi.rs  kms_interactive.rs  legacy_modeset.rs  list_modes.rs  mutate_properties.rs  page_flip_event.rs  properties.rs  resources.rs  syncobj.rs  util.rs
examples/utils/: mod.rs
src/: buffer.rs  ffi.rs  lib.rs  result.rs  util.rs
src/buffer/: format.rs  fourcc.rs  mod.rs
src/control/: atomic.rs  connector.rs  crtc.rs  debug.rs  dumbbuffer.rs  encoder.rs  framebuffer.rs  mod.rs  plane.rs  property.rs  syncobj.rs
src/ffi/: basic.rs  gem.rs  ioctl.rs  macros.rs  mod.rs  mode.rs
src/node/: constants.rs  mod.rs
tests/: test.rs
