[package]
name = "drm"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.7.0"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>", "Victoria Brekenfeld <crates-io@drakulix.de>"]
exclude = [".gitignore", ".github"]

[dependencies]
bitflags = "1"
bytemuck = { version = "1.12", features = ["extern_crate_alloc", "derive"] }
drm-ffi = { path = "drm-ffi", version = "0.3.0" }
drm-fourcc = "^2.2.0"

[dependencies.nix]
version = "0.25.0"
default-features = false
features = ["mman"]

[dev-dependencies]
image = { version = "^0.23.14", default-features = false, features = ["png"] }
rustyline = "^8.0.0"

[features]
use_bindgen = ["drm-ffi/use_bindgen"]

[workspace]
members = [
    "drm-ffi",
    "drm-ffi/drm-sys",
]
