[package]
name = "drm-ffi"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.6.0"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
rust-version = "1.65"

[dependencies]
drm-sys = { path = "drm-sys", version = "0.5.0" }

[dependencies.nix]
version = "0.27"
default-features = false
features = ["ioctl"]

[features]
use_bindgen = ["drm-sys/use_bindgen"]
