[package]
name = "drm-ffi"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.7.1"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
rust-version = "1.65"
edition = "2021"

[dependencies]
drm-sys = { path = "drm-sys", version = "0.6.1" }
rustix = { version = "0.38.22" }

[features]
use_bindgen = ["drm-sys/use_bindgen"]
