[package]
name = "drm-ffi"
description = "Safe, low-level bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.9.0"
license = "MIT"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
rust-version = "1.66"
edition = "2021"

[dependencies]
drm-sys = { path = "drm-sys", version = "0.8.0" }
rustix = { version = "0.38.22" }

[features]
use_bindgen = ["drm-sys/use_bindgen"]
