[package]
name = "drm-sys"
description = "Bindings to the Direct Rendering Manager API"
version = "0.0.5"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "MIT"
build = "build.rs"

[dependencies]
libc = "0.2.23"

[features]
default = []
use_bindgen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.25", optional = true }