[package]
name = "drm-sys"
description = "Bindings to the Direct Rendering Manager API"
version = "develop"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "MIT"
build = "build.rs"

[dependencies]
libc = "*"

[features]
default = []
use_bindgen = ["bindgen", "pkg-config"]

[build-dependencies]
bindgen = { version = "*", optional = true }
pkg-config = { version = "*", optional = true }