[package]
name = "drm-sys"
description = "Bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.5.0"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "MIT"
build = "build.rs"
rust-version = "1.65"

[features]
default = []
use_bindgen = ["bindgen", "pkg-config"]
update_bindings = ["use_bindgen"]

[build-dependencies]
bindgen = { version = "0.66", optional = true }
pkg-config = { version = "0.3.19", optional = true }
