[package]
name = "drm-sys"
description = "Bindings to the Direct Rendering Manager API"
repository = "https://github.com/Smithay/drm-rs"
version = "0.8.0"
authors = ["Tyler Slabinski <tslabinski@slabity.net>"]
license = "MIT"
build = "build.rs"
rust-version = "1.66"
edition = "2021"

[features]
default = []
use_bindgen = ["bindgen", "pkg-config"]
update_bindings = ["use_bindgen"]

[build-dependencies]
bindgen = { version = "0.69.1", optional = true }
pkg-config = { version = "0.3.19", optional = true }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
linux-raw-sys = { version = "0.6", default-features = false, features = ["general", "no_std"] }

[target.'cfg(not(any(target_os = "android", target_os = "linux")))'.dependencies]
libc = "0.2"
